[tool.poetry]
name = "roughgarden"
version = "0.1.0"
description = "Practice code for Roughgarden's algo course"
authors = ["beli <imnutsdoc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
